# mysky

./: .eslintrc.js  .gitignore  App.tsx  ICON_INSTRUCTIONS.md  LICENSE  OPTIMIZATION.md  PUSH_TO_GITHUB.md  README.md  app.json  buildozer.spec  config.py  constants.py  exceptions.py  index.js  main.py  package-lock.json  package.json  pyproject.toml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/assets/: index.android.bundle
android/app/src/main/java/com/mysky/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
api/: weather_api.py
screens/: modern_search_screen.py  modern_weather_screen.py
scripts/: build-apk-debug.sh  build-apk-release.sh  build-apk.sh  clean-build.sh  create-icon.sh  regenerate-icons.sh
src/components/: LineChart.tsx  WeatherCompositeChart.tsx
src/hooks/: useWeather.ts
src/services/: cache.ts  openMeteo.ts
src/utils/: weatherCodes.ts
utils/: cache.py  debug.py  weather_condition_detector.py
widgets/: city_search.py  modern_graphs.py  ui_icon.py  weather_image_icon.py  weather_summary.py
