[project]
name = "mysky"
version = "0.1.0"
description = "Privacy-focused weather app for Android"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kivy>=2.3.0",
    "openmeteo-requests>=1.2.0",
    "requests-cache>=1.2.0",
    "kivy-garden-graph>=0.4.0",
    "pillow>=12.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "buildozer>=1.5.0",
    "cython>=3.0.0"
]
